--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
     <section class="intro">
       <div class="intro__wrapper">
         <h2 class="intro__title">СЕДОНА – небольшой городок в Араизоне, заслуживающий большего!</h2>
-        <p class="lead">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+        <p class="intro__lead">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
       </div>
     </section>
     <section class="advantages">
