Исправил title в form.html

--- a/source/form.html
+++ b/source/form.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Гостиницы в Седоне</title>
+  <title>Страница для отзывов о городе Седоне</title>
 </head>
 
 <body class="page__body">
@@ -148,7 +148,8 @@
 
     <div class="popup popup--success">
       <b class="popup__title">Ваш отзыв отправлен!</b>
-      <p class="popup__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+      <p class="popup__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его
+        на сайте.</p>
       <button class="popup__button button" type="button">Закрыть окно</button>
     </div>
 
