--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Гостиницы в Седоне</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
@@ -12,93 +14,98 @@
       <img src="img/logotype-mobile.svg" width="102" height="84" alt="Город Седона">
     </a>
     <nav class="main-nav">
-      <button class="man-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active">
-            <a>
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html">
-              Фото и видео
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">
-              Форма отзыва
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              HTML Academy
-            </a>
-          </li>
+        <li class="site-list__item site-list__item--active">
+          <a>
+            Главная
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html">
+            Фото и видео
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">
+            Форма отзыва
+          </a>
+        </li>
+        <li class="site-list__item">
+          <a href="#">
+            HTML Academy
+          </a>
+        </li>
         </ul>
-      </div>
     </nav>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Город Седона - круче Гранд Каньона</h1>
+    <section class="welcome">
+      <div class="welcome__wrapper">
+        <h2 class="visually-hidden">Приветствуем вас в городе Седоне</h2>
+      </div>
+    </section>
     <section class="intro">
       <div class="intro__wrapper">
-        <h2 class="intro__title">СЕДОНА – небольшой городок в Араизоне, заслуживающий большего!</h2>
+        <h2 class="intro__title">СЕДОНА – небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="intro__lead">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
       </div>
     </section>
     <section class="advantages">
-      <div class="advantages__wrapper">
-        <h2 class="visually-hidden">Преимущества города Седоны</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--1">
+      <h2 class="visually-hidden">Преимущества города Седоны</h2>
+      <ul class="advantages__list">
+        <li class="advantages__item advantages__item--1">
+          <div class="advantages__wrapper">
             <h3 class="advantages__title">Настоящий городок</h3>
             <p class="advantages__number">- №1 -</p>
             <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          </li>
-          <li class="advantages__item advantages__item--house">
-            <h3 class="advantages__title">Жилье</h3>
-            <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </li>
-          <li class="advantages__item advantages__item--food">
-            <h3 class="advantages__title">Еда</h3>
-            <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="advantages__item advantages__item--souvenir">
-            <h3 class="advantages__title">Сувениры</h3>
-            <p class="advantages__description">Не только китайского, но иместного производства!</p>
-          </li>
-          <li class="advantages__item advantages__item--2">
+          </div>
+          <img src="" alt="Виды города Седоны">
+        </li>
+        <li class="advantages__item advantages__item--house">
+          <h3 class="advantages__title">Жилье</h3>
+          <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </li>
+        <li class="advantages__item advantages__item--souvenir">
+          <h3 class="advantages__title">Сувениры</h3>
+          <p class="advantages__description">Не только китайского, но иместного производства!</p>
+        </li>
+        <li class="advantages__item advantages__item--food">
+          <h3 class="advantages__title">Еда</h3>
+          <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li class="advantages__item advantages__item--2">
+          <img src="" alt="Вид на горы и Мост Дьявола">
+          <div class="advantages__wrapper">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
             <p class="advantages__number">- №2 -</p>
             <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          </li>
-          <li class="advantages__item">
-            <h3 class="advantages__title">Небольшая площадь</h3>
-            <p class="advantages__number">- №3 -</p>
-            <p class="advantages__description">Все интересные места находятся очень близко</p>
-          </li>
-          <li class="advantages__item">
-            <h3 class="advantages__title">Красивая дорога</h3>
-            <p class="advantages__number">- №4 -</p>
-            <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages__item">
-            <h3 class="advantages__title">Мало туристов</h3>
-            <p class="advantages__number">- №5 -</p>
-            <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-        </ul>
-      </div>
+          </div>
+        </li>
+        <li class="advantages__item advantages__item--different">
+          <h3 class="advantages__title">Небольшая площадь</h3>
+          <p class="advantages__number">- №3 -</p>
+          <p class="advantages__description">Все интересные места находятся очень близко</p>
+        </li>
+        <li class="advantages__item advantages__item--different">
+          <h3 class="advantages__title">Красивая дорога</h3>
+          <p class="advantages__number">- №4 -</p>
+          <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="advantages__item advantages__item--different">
+          <h3 class="advantages__title">Мало туристов</h3>
+          <p class="advantages__number">- №5 -</p>
+          <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+      </ul>
     </section>
     <section class="booking">
-      <div class="booking__wrapper">
-        <h2 class="visually-hidden">Поиск гостиниц в Седоне</h2>
-        <p class="booking__title">Заинтересовались?</p>
-        <p class="booking_description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
-          в Седоне</p>
-        <a href="#" class="booking__button button">Найти гостиницу</a>
-      </div>
+      <h2 class="visually-hidden">Поиск гостиниц в Седоне</h2>
+      <p class="booking__title">Заинтересовались?</p>
+      <p class="booking__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
+        в Седоне</p>
+      <a href="#" class="booking__button button">Найти гостиницу</a>
     </section>
     <section class="map">
       <div class="map__wrapper">
