--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Фотогалерея и видеопрезентация</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
@@ -16,12 +18,12 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a>
+            <a href="index.html">
               Главная
             </a>
           </li>
           <li class="site-list__item site-list__item--active">
-            <a href="catalog.html">
+            <a>
               Фото и видео
             </a>
           </li>
@@ -41,6 +43,11 @@
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Страница с фотографиями и видео</h1>
+    <section class="welcome">
+      <div class="welcome__wrapper">
+        <h2 class="visually-hidden">Приветствуем вас в городе Седоне</h2>
+      </div>
+    </section>
     <section class="intro">
       <div class="intro__wrapper">
         <h2 class="intro__title">Фото и видео</h2>
