Редактирование страниц catalog.html и form.html на основе выполненного другим студентом, добавление графики

--- a/source/index.html
+++ b/source/index.html
@@ -22,22 +22,22 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--current">
-              <a>
+              <a href="index.html" class="main-nav__link main-nav__link--current">
                 Главная
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="catalog.html">
+              <a href="catalog.html" class="main-nav__link">
                 Фото и видео
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="form.html">
+              <a href="form.html" class="main-nav__link">
                 Форма отзыва
               </a>
             </li>
             <li class="main-nav__item">
-              <a href="#">
+              <a href="#" class="main-nav__link">
                 HTML Academy
               </a>
             </li>
