--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,134 +4,238 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Фотогалерея и видеопрезентация</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
+  <title>Седона – каталог фото и видео</title>
 </head>
 
 <body class="page__body">
-  <header class="page-header">
-    <a class="page-header__logo">
-      <img src="img/logotype-mobile.svg" width="102" height="84" alt="Город Седона">
-    </a>
-    <nav class="main-nav">
-      <button class="man-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item site-list__item--active">
-            <a>
-              Фото и видео
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">
-              Форма отзыва
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              HTML Academy
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <main class="page-main">
-    <h1 class="visually-hidden">Страница с фотографиями и видео</h1>
-    <section class="welcome">
-      <div class="welcome__wrapper">
-        <h2 class="visually-hidden">Приветствуем вас в городе Седоне</h2>
-      </div>
-    </section>
-    <section class="intro">
-      <div class="intro__wrapper">
-        <h2 class="intro__title">Фото и видео</h2>
-        <p class="intro__lead">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и
-          экономике.</p>
-      </div>
-    </section>
-    <section class="photos">
-      <div class="photos__wrapper">
-        <h2 class="visually-hidden">Фотогалерея</h2>
-        <ul class="photos__list gallery">
-          <li class="gallery__item">
-            <a class="gallery__link" href="#">
-              <img class="gallery__image" src="img/photo1.jpeg" width="280" height="280" alt="Неродные просторы">
-            </a>
-            <p class="gallery__title">Неродные просторы</p>
-            <p class="gallery__author">Автор фото: Борис</p>
-            <p class="gallery_like">1350</p>
-          </li>
-          <li class="gallery__item">
-            <a class="gallery__link" href="#">
-              <img class="gallery__image" src="img/photo1.jpeg" width="280" height="280" alt="Местная растительность">
-            </a>
-            <p class="gallery__title">Местная растительность</p>
-            <p class="gallery__author">Автор фото: Сергей</p>
-            <p class="gallery_like">143</p>
-          </li>
-          <li class="gallery__item">
-            <a class="gallery__link" href="#">
-              <img class="gallery__image" src="img/photo1.jpeg" width="280" height="280" alt="Дорога на север">
-            </a>
-            <p class="gallery__title">Дорога на север</p>
-            <p class="gallery__author">Автор фото: Петр</p>
-            <p class="gallery_like">96</p>
-          </li>
-          <li class="gallery__item">
-            <a class="gallery__link" href="#">
-              <img class="gallery__image" src="img/photo1.jpeg" width="280" height="280" alt="Мост дьявола">
-            </a>
-            <p class="gallery__title">Мост дьявола</p>
-            <p class="gallery__author">Автор фото: Антон</p>
-            <p class="gallery_like">254</p>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="video">
-      <div class="video__wrapper">
-        <h2 class="visually-hidden">Видеопрезентация</h2>
-        <p class="video__text">Все еще сомневаетесь?</p>
-        <p class="video__lead">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
-        </p>
-        <div class="video__player">
-          <img class="video__image" src="img/video.jpeg" width="320" height="201" alt="Видеопрезентация">
-          <div class="video__slider"></div>
-          <div class="video__replay"></div>
-          <div class="video__subtitles"></div>
-          <div class="video__fullscreen"></div>
+  <div class="container">
+    <header class="page-header">
+      <nav class="page-header__nav main-nav main-nav--closed main-nav--no-js">
+        <button class="page-header__toggle main-nav__toggle main-nav__toggle--close" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a href="index.html" class="main-nav__link">
+                Главная
+              </a>
+            </li>
+            <li class="main-nav__item main-nav__item--current">
+              <a href="catalog.html" class="main-nav__link main-nav__link--current">
+                Фото и видео
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a href="form.html" class="main-nav__link">
+                Форма отзыва
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#" class="main-nav__link">
+                HTML Academy
+              </a>
+            </li>
+          </ul>
         </div>
+      </nav>
+      <a class="page-header__logo" href="index.html">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg">
+          <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="102" height="84" alt="Город Седона">
+        </picture>
+      </a>
+      <section class="intro intro--other">
+        <h1 class="visually-hidden">Фото и видео Седоны</h1>
+        <img class="intro__text intro__text--other" src="img/sedona.svg" width="229" height="39" alt="Sedona">
+      </section>
+    </header>
+    <main class="page-main">
+      <div class="page-main__header description description--catalog">
+        <h2 class="description__title description__title--catalog">Фото и видео</h2>
+        <p class="description__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
-    </section>
-  </main>
-  <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <p class="page-footer__contacts">#visitsedona</p>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="#">Мы в Твиттере</a>
+      <section class="page-main__catalog catalog">
+        <h2 class="visually-hidden">Фотогалерея</h2>
+        <ul class="catalog__list">
+          <li class="catalog__item photo-card photo-card--first">
+            <a class="photo-card__link photo-card__link--first" href="#bigfoto">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-1-desktop.webp 1x, img/photo-1-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-1-tablet.webp 1x, img/photo-1-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/photo-1-mobile.webp 1x, img/photo-1-mobile@2x.webp 2x">\
+                <source media="(min-width: 1200px)" srcset="img/photo-1-desktop.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg 1x, img/photo-1-tablet@2x.jpg 2x">
+                <img class="photo-card__img" src="img/photo-1-mobile.jpg" srcset="img/photo-1-mobile@2x.jpg" width="280" height="280" alt="Фото с дорогой на закате">
+              </picture>
+            </a>
+            <div class="photo-card__wrapper">
+              <div class="photo-card__description">
+                <h3 class="photo-card__title photo-card__title--font">Неродные просторы</h3>
+                <p class="photo-card__author photo-card__author--font">Автор фото: Борис</p>
+              </div>
+              <button class="photo-card__likes likes" type="button">
+                <span class="likes__counter">1350</span>
+              </button>
+            </div>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Мы в Facebook</a>
+          <li class="catalog__item photo-card">
+            <a class="photo-card__link" href="#bigfoto">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-2-desktop.webp 1x, img/photo-2-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-2-tablet.webp 1x, img/photo-2-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/photo-2-mobile.webp 1x, img/photo-2-mobile@2x.webp 2x">\
+                <source media="(min-width: 1200px)" srcset="img/photo-2-desktop.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
+                <img class="photo-card__img" src="img/photo-2-mobile.jpg" srcset="img/photo-2-mobile@2x.jpg" width="280" height="280" alt="Растение">
+              </picture>
+            </a>
+            <div class="photo-card__wrapper">
+              <div class="photo-card__description">
+                <h3 class="photo-card__title photo-card__title--font">Местная растительность</h3>
+                <p class="photo-card__author photo-card__author--font">Автор фото: Сергей</p>
+              </div>
+              <button class="photo-card__likes likes" type="button">
+                <span class="likes__counter">143</span>
+              </button>
+            </div>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="#">Мы в Youtube</a>
+          <li class="catalog__item photo-card">
+            <a class="photo-card__link" href="#bigfoto">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-3-desktop.webp 1x, img/photo-3-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-3-tablet.webp 1x, img/photo-3-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/photo-3-mobile.webp 1x, img/photo-3-mobile@2x.webp 2x">\
+                <source media="(min-width: 1200px)" srcset="img/photo-3-desktop.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
+                <img class="photo-card__img" src="img/photo-3-mobile.jpg" srcset="img/photo-3-mobile@2x.jpg" width="280" height="280" alt="Фото с дорогой на Север">
+              </picture>
+            </a>
+            <div class="photo-card__wrapper">
+              <div class="photo-card__description">
+                <h3 class="photo-card__title photo-card__title--font">Дорога на север</h3>
+                <p class="photo-card__author photo-card__author--font">Автор фото: Петр</p>
+              </div>
+              <button class="photo-card__likes likes" type="button">
+                <span class="likes__counter">96</span>
+              </button>
+            </div>
+          </li>
+          <li class="catalog__item photo-card">
+            <a class="photo-card__link" href="#bigfoto">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-4-desktop.webp 1x, img/photo-4-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-4-tablet.webp 1x, img/photo-4-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/photo-4-mobile.webp 1x, img/photo-4-mobile@2x.webp 2x">\
+                <source media="(min-width: 1200px)" srcset="img/photo-4-desktop.jpg 1x, img/photo-4-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg 1x, img/photo-4-tablet@2x.jpg 2x">
+                <img class="photo-card__img" src="img/photo-4-mobile.jpg" srcset="img/photo-4-mobile@2x.jpg" width="280" height="280" alt="Мост Дьявола">
+              </picture>
+            </a>
+            <div class="photo-card__wrapper">
+              <div class="photo-card__description">
+                <h3 class="photo-card__title photo-card__title--font">Неродные просторы</h3>
+                <p class="photo-card__author photo-card__author--font">Автор фото: Антон</p>
+              </div>
+              <button class="photo-card__likes likes" type="button">
+                <span class="likes__counter">254</span>
+              </button>
+            </div>
           </li>
         </ul>
-      </div>
+      </section>
+      <section class="video">
+        <div class="video__header description">
+          <h2 class="description__title">Все еще сомневаетесь?</h2>
+          <p class="description__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
+          </p>
+        </div>
+        <div class="video__container player">
+          <div class="player__image-wrapper">
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop.webp 1x, img/video-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet.webp 1x, img/video-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/video-mobile.webp 1x, img/video-mobile@2x.webp 2x">
+              <source media="(min-width: 1200px)" srcset="img/video-desktop.jpg 1x, img/video-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/video-tablet.jpg 1x, img/video-tablet@2x.jpg 2x">
+              <img class="player__image" src="img/video-mobile.jpg" srcset="img/video-mobile@2x.jpg" width="320" height="201" alt="Видеопрезентация">
+            </picture>
+          </div>
+          <div class="player__video">
+
+          </div>
+          <div class="player__interface">
+            <div class="player__button player__slider">
+              <div class="player__scale"></div>
+              <div class="player__pointer"></div>
+            </div>
+            <button class="player__button player__button--replay">
+              <span class="visually-hidden">Повторить</span>
+              <svg class="player__icon" width="16" height="20">
+                <use xlink:href="img/sprite.svg#replay"></use>
+              </svg>
+            </button>
+            <button class="player__button player__button--subtitles">
+              <span class="visually-hidden">Субтитры</span>
+              <svg class="player__icon" width="32" height="20">
+                <use xlink:href="img/sprite.svg#subtitles"></use>
+              </svg>
+            </button>
+            <button class="player__button player__button--full">
+              <span class="visually-hidden">На весь экран</span>
+              <svg class="player__icon" width="20" height="20">
+                <use xlink:href="img/sprite.svg#fullscreen"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__hashtag">#visitsedona</div>
+      <ul class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="#">
+            <span class="visually-hidden">Мы в Твиттере</span>
+            <svg class="social__link-icon" width="18" height="15">
+              <use xlink:href="img/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#">
+            <span class="visually-hidden">Мы в Facebook</span>
+            <svg class="social__link-icon" width="9" height="19">
+              <use xlink:href="img/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="#">
+            <span class="visually-hidden">Мы в Youtube</span>
+            <svg class="social__link-icon" width="20" height="14">
+              <use xlink:href="img/sprite.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
       <div class="page-footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
-        <a class="copyright__link" href="#">HTML Academy</a>
+        <a class="copyright__link copyright__logo" href="#">
+          <span class="visually-hidden">HTML Academy</span>
+          <svg class="copyright__link-icon" width="27" height="35">
+            <use xlink:href="img/sprite.svg#icon-copyright"></use>
+          </svg>
+        </a>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
+  <script src="js/script.js"></script>
 </body>
-
 </html>
