Добавляет стилизацию классов feedback-form, input

--- a/source/form.html
+++ b/source/form.html
@@ -74,7 +74,7 @@
             <label class="feedback-form__label feedback-form__label--font" for="surname">Фамилия<sup>*</sup>:</label>
             <input class="feedback-form__input feedback-form__input--name input" type="text" id="surname" placeholder="Иванов" required>
           </div>
-          <div class="feedback-form__wrapper feedback-form__wrapper--name input">
+          <div class="feedback-form__wrapper feedback-form__wrapper--name">
             <label class="feedback-form__label feedback-form__label--font" for="patronymic">Отчество:</label>
             <input class="feedback-form__input feedback-form__input--name input" type="text" id="patronymic" placeholder="Александрович">
           </div>
