--- a/source/form.html
+++ b/source/form.html
@@ -189,14 +189,14 @@
       </div>
     </footer>
 
-    <section class="popup popup--error popup--show">
+    <section class="popup popup--error">
       <div class="popup__error">
         <h2 class="popup__title popup__title--error">Что-то пошло не так!</h2>
         <p class="popup__message">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       </div>
       <button class="popup__button popup__button--error button" type="button">OK</button>
     </section>
-    <section class="popup popup--success popup--show">
+    <section class="popup popup--success">
       <div class="popup__success">
         <h2 class="popup__title">Ваш отзыв отправлен!</h2>
         <p class="popup__message">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В&nbsp;ближайшее время мы опубликуем его на сайте.</p>
